# Novamind-Backend-ONLY-TWINS

./: .clinerules  .gitignore  .markdownlint.json  .windsurfrules  LICENSE  MCP.md  README.md  docker-compose.test.yml  fix_decorator_class_spacing.py  fix_mock_db.py  fix_test_biometric.py  fix_twin_tests.py  novamind_test_fixer.py  pytest.ini  restore_tests.sh  sitecustomize.py  test_db.sqlite
backend/: .coveragerc  Dockerfile.test  README-test-infrastructure.md  TESTING.md  alembic.ini  clean_cache.py  conftest.py  coverage.json  deploy_and_test.sh  docker-compose.test.yml  fix_assert_syntax.py  fix_mock_db.py  fix_syntax_errors.py  fix_test_imports.py  fixed_deploy_and_test.sh  main.py  pyproject.toml  pytest.ini  quantum_deploy_test.sh  requirements-analytics.txt  requirements-dev.txt  requirements-security.txt  requirements-standalone.txt  requirements-test.txt  requirements.txt  run-standalone-tests.sh  run-tests.sh  run_neurotransmitter_test.py  run_tests.sh  test-classification-report.md  test_classification_report_20250411_164114.json  test_classification_report_20250411_164410.json  test_classification_report_20250411_165021.json  test_classification_report_20250411_165047.json  test_classification_report_20250411_170934.json  test_classification_report_20250411_171619.json  test_classification_report_updated.json  test_db.sqlite  unfixed_syntax_errors.txt
backend/alembic/: __init__.py  env.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  (+2 more)
backend/backup/: db.py.bak
backend/coverage_html/: class_index.html  function_index.html  index.html  status.json  z_01a49b2562783b58___init___py.html  z_01e020adf1f3090c___init___py.html  z_01e020adf1f3090c_dependencies_py.html  z_020bb4623d578061___init___py.html  z_0448ae94e69092ef___init___py.html  z_0448ae94e69092ef_secure_messaging_service_py.html  z_09a199bef5853dc0___init___py.html  z_09a199bef5853dc0_test_patient_endpoints_py.html  z_09cca03a05123709___init___py.html  z_09f89b1da28dc74f___init___py.html  z_09f89b1da28dc74f_patient_fixtures_py.html  z_09fa53ea85e7bfd9___init___py.html  z_0a3ce75a45a8cb57___init___py.html  z_0c9a0df764f16588___init___py.html  z_0c9a0df764f16588_exceptions_py.html  z_0d57528591449630___init___py.html  z_0d57528591449630_test_actigraphy_api_integration_py.html  (+440 more)
(+1632 files in other folders)
