[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "strict"
timeout = 300

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["app"]
omit = ["app/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[project]
name = "novamind-backend"
version = "1.0.0"
description = "Novamind Digital Twin Backend"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [
    {name = "Novamind Team"}
]
dependencies = [
    "fastapi>=0.103.1",
    "pydantic>=2.3.0",
    "pydantic-settings>=2.0.3",
    "sqlalchemy>=2.0.20",
    "asyncpg>=0.28.0",
    "aiosqlite>=0.19.0",
    "uvicorn>=0.23.2",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.6",
    "numpy>=1.25.2",
    "pandas>=2.1.0",
    "xgboost>=1.7.6",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.2",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.24.1",
    "pytest-cov>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "ruff>=0.0.284",
    "pre-commit>=3.3.3",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0", 
    "httpx>=0.24.1",
    "pytest-timeout>=2.1.0",
]
analytics = [
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
    "plotly>=5.16.1",
]
security = [
    "bandit>=1.7.5",
    "safety>=2.3.5",
    "owasp-dependency-check>=0.6.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I", "N", "W"]
ignore = ["E203"]
